UIUX-343: fixed spacing of textarea field in record view

--- a/sugarcrm/styleguide/less/clients/base/components/record.less
+++ b/sugarcrm/styleguide/less/clients/base/components/record.less
@@ -60,7 +60,7 @@ h1 {
     width: 88px;
     .select2-choice {
       margin-top: 0;
-      height: 26px;
+      height: 30px;
       padding: 4px 0 4px 8px;
       div {
         padding: 4px 2px;
@@ -143,8 +143,8 @@ h1 {
     .uneditable-input {
       position: relative;
       z-index: 1;
-      //this has to be important because there is an input that is a .row-fluid [class*="span"]:first-child
       margin-top: 0;
+      //this has to be important because there is an input that is a .row-fluid [class*="span"]:first-child
       margin-left: -7px !important;
       font-size: 14px;
       padding: 6px;
@@ -176,18 +176,22 @@ h1 {
 
     &[data-type="textarea"] {
       .normal > span {
-        display: inline !important;
+        display: inline-block !important;
         margin-bottom: 9px;
+        padding: 7px 0;
+        width: 100%;
       }
       .textarea-text {
-        display: inline !important;
-        padding: 7px 0;
+        //display: inline-block !important;
+      }
+      textarea {
+        margin-top: -7px;
       }
     }
 
     &[data-type="url"] {
       .normal > span {
-        display: block !important;
+        display: inline-block !important;
         margin-bottom: 9px;
         a {
           display: block !important;
@@ -207,7 +211,7 @@ h1 {
       .control-group.email {
         padding-right: 132px;
         position: relative;
-        min-height: 32px;
+        min-height: 30px;
         .input-append.widget {
           margin-bottom: 0;
           input[type="text"],
@@ -263,7 +267,7 @@ h1 {
         text-overflow: ellipsis;
         padding: 7px 0;
         .select2-container {
-          margin: -5px 0 0 -9px;
+          margin: -7px 0 0 -9px;
           position: absolute;
         }
       }
